<resources>
    <string name="app_name">myBudget</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">0</string>

    <string name="settings_max_magnitude_label">Maximum Magnitude</string>
    <string name="settings_max_magnitude_key" translatable="false">max_magnitude</string>
    <string name="settings_max_magnitude_default" translatable="false">10</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <string name="settings_list_items_label">List Length</string>
    <string name="settings_list_items_key" translatable="false">list_items</string>
    <string name="settings_list_items_default" translatable="false">50</string>

    <string name="destination">{destination}</string>
    <string name="title_activity_bases">BasesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>



    <string name="ReceiptsList">Receipts List</string>
    <string name="Personal">Personal</string>
    <string name="Groups">Groups</string>
    <string name="ChooseBudget">Choose Budget</string>
    <string name="BudgetsList">Budgets List</string>
    <string name="loggedinSuccessfully">logged in Successfully!</string>
    <string name="Thepasswordisincorrectforthis">\"The password is incorrect for this \"</string>
    <string name="usernamePleasetryagain">username! Please try again!</string>
    <string name="emailPleasetryagain">email! Please try again!</string>
    <string name="notregistered">this email is not registered in the application! please sign up first!</string>
    <string name="nousername">there is no such a username! please try again</string>
    <string name="failedtoCONNECT">failed to CONNECT to the internet! Try Again please!</string>
    <string name="mistakeindata">There is mistake(s) in your data</string>
    <string name="missingdata">There is/are missing data! Try again!</string>
    <string name="Successfully">Successfully</string>
    <string name="completeall">Please complete all required fields</string>
    <string name="formatemail">\"incorrect format for the email address! \"</string>
    <string name="RegisteredSuccessfully">Registered Successfully!</string>
    <string name="the">\"The \"</string>
    <string name="isreserved">\" is reserved! TRY AGAIN!\"</string>
    <string name="Incomes">Incomes</string>
    <string name="Expenses">Expenses</string>
    <string name="AddCategory">Add Category</string>
    <string name="MONTHLYREPORT">MONTHLY REPORT</string>
    <string name="Home">Home</string>
    <string name="Reports">Reports</string>
    <string name="Wallets">Wallets</string>
    <string name="Settings">Settings</string>
    <string name="AddReceipt">Add Receipt</string>
    <string name="filltheamount">Please fill the amount</string>
    <string name="CreateItem">Create Item</string>
    <string name="GeneralReport">General Report</string>
    <string name="CurrentUsers">Current Users</string>
    <string name="AddnewUser">Add New User</string>
    <string name="UsersList">Users List</string>
    <string name="ChooseItem">Choose Item</string>
    <string name="signing_in">Signing in ...</string>
    <string name="register">Create a new account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>

    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birth_date">Birth Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_to_budget">add to budget</string>
    <string name="balance">Balance</string>
    <string name="Nothing_found">Nothing found</string>
    <string name="create_budget">Create Budget</string>
    <string name="budget">Budget</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_balance">Enter Balance</string>
    <string name="personal">Personal</string>
    <string name="group">Group</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_category">Add Category</string>
    <string name="category">Category</string>

    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>

    <string name="create_new_item">Create new Item</string>
    <string name="item">Item</string>
    <string name="add_receipt">Add Receipt</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="enter_amount">Enter Amount</string>

    <string name="wallet">Wallet</string>
    <string name="filter_users">Filter Users</string>
    <string name="show_users_who_purchase">Show users who purchase:</string>
    <string name="enter_name_of_item">Enter Name Of Item</string>
    <string name="show_users_who_purchase_more_than">Show users who purchase more than:</string>
    <string name="enter_number_of_items">Enter Number Of Items</string>

    <string name="add">Add</string>
    <string name="reports">Reports</string>
    <string name="wallets">Wallets</string>
    <string name="settings">Settings</string>
    <string name="create_new_ite">Create New Item</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="invite_friend">Invite friend to Budget</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="report">Report</string>
    <string name="sign_out">Sign Out</string>
    <string name="Languages">Languages</string>
    <string name="Currency">Currency</string>
    <string name="Pleasecompleteallrequiredfields">Please complete all required fields</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Travel">Travel</string>
    <string name="House">House</string>
    <string name="Salary">Salary</string>
    <string name="PersonalBusiness">Personal Business</string>
    <string name="Bank">Bank</string>
    <string name="Family">Family</string>
    <string name="DefaultBudget">Default Budget</string>
    <string name="NonCategorized">Non Categorized</string>
    <string name="LastMonth">Last Month</string>
    <string name="RemoveReceipt">Remove receipt</string>
    <string name="suredeleteRceipt">Are You Sure that you want to delete this receipt ?</string>
    <string name="Yesremovereceipt">Yes, remove receipt</string>
    <string name="no">No</string>
    <string name="Suredeletebudget">Are You Sure that you want to delete this budget ? you may lose all receipts related to this budget</string>
    <string name="Removebudget">Remove budget</string>
    <string name="Yesremovebudget">Yes, remove budget</string>
    <string name="Yesremovecategory">Yes, remove category</string>
    <string name="RemoveCategory">Remove Category</string>
    <string name="suredeletecategory">Are You Sure that you want to delete this category ? you may lose all receipts related to this category</string>
    <string name="LastWeek">Last Week</string>
    <string name="remove">remove</string>
    <string name="sign_up_with_google">Sign Up With Google:</string>
    <string name="sr">SR</string>
    <string name="don_t_you_have_a_google_account">Don\'t you have an account?</string>

</resources>
