<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host_fragment"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="projent"
        android:label="@string/menu_home"
        tools:layout="@layout/content_recycler">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="projectgment"
        android:label="@string/home_second"
        tools:layout="@layout/activity_tabs">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="proje"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_wallets" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="jk"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_home" />
</navigation>