<?xml version="1.0" encoding="utf-8"?>

    <PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title"
    >

    <ListPreference
        android:defaultValue=""
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_labels"
        android:key="lang"
        android:title="@string/Languages" />

<!--    <ListPreference-->
<!--        android:defaultValue="$"-->
<!--        android:entries="@array/settings_order_by_values"-->
<!--        android:entryValues="@array/settings_order_by_values"-->
<!--        android:key="@string/Currency"-->
<!--        android:title="@string/Currency" />-->

<!--    <EditTextPreference-->
<!--        android:defaultValue="@string/settings_list_items_default"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:key="@string/settings_list_items_key"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:title="@string/settings_list_items_label" />-->


    <Preference
        android:gravity="bottom"
        android:icon="@android:drawable/ic_lock_power_off"
        android:inputType="numberDecimal"
        android:key="sign_out"
        android:selectAllOnFocus="true"
        android:title="@string/sign_out"
        />





</PreferenceScreen>
